@startuml
'https://plantuml.com/class-diagram
hide empty members
skinparam linetype ortho

'观察者模式puml图
class Subject{
    +register(Observer)
    +detach(Observer)
    +notify()
}
class Action{
    +$observers
    +register()
    +detach()
    +notify()
}
class Observer{
    +watch()
}
class User implements Observer{
    +watch()
}
class Cat implements Observer{
    +watch()
}
class Dog implements Observer{
    +watch()
}
Subject <|-- Action
Subject --|> Observer
User --|> Action
Cat --|> Action
Dog --|> Action

@enduml